--- a/css/signin.css
+++ b/css/signin.css
@@ -1,7 +1,14 @@
+*{
+    /* margin: 0;
+    padding: 0; */
+    font-family: Okra, Helvetica, sans-serif;
+    color: aliceblue;
+}
 body{
-    /* background-image: url(/img/bg4.jpg); */
+    background-image: url(/img/bg4.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    opacity: 0.9;
 }
 
 #container{
@@ -9,18 +16,50 @@ body{
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 130px;
 }
 #form-container{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 200px;
-    width: 300px;
-    border: 3px solid black;
+    height: auto;
+    width: 350px;
+    border: 1px solid;
+    border-radius: 10px;
+    background-color: whitesmoke;
     /* width: auto; */
     /* opacity: 0.8; */
 }
+#form-container h2{
+    color: gray;
+    padding: 10px;
+}
+#form-container span{
+    color: black;
+    padding: 5px;
+}
+#form-container a{
+    color:rgb(10, 194, 10) ;
+    padding: 5px;
+    text-decoration: none;
+}
 .form-grp{
-    margin: 20px;
+    margin: 18px;
+    padding: 5px;
+}
+.form-grp input{
+    width: 300px ;
+    padding: 10px;
+    border-radius: 8px;
+    border: 2px solid  lightslategray;
+    color: black;
+    outline: none;
+}
+.form-grp button{
+    background-color:rgb(10, 194, 10);
+    border: transparent;
+    border-radius: 8px;
+    /* color: aliceblue; */
+    padding: 10px;
+    width: 280px;
 }
