--- a/css/login.css
+++ b/css/login.css
@@ -34,15 +34,15 @@ body{
     color: gray;
     padding: 10px;
 }
-#form-login-container p{
+#form-login-container p,span{
     color: black;
     padding: 5px;
 }
-/* #form-login-container a{
+#form-login-container a{
     color:rgb(10, 194, 10) ;
     padding: 5px;
     text-decoration: none;
-} */
+}
 .form-grp{
     margin: 10px;
     padding: 5px;
@@ -61,5 +61,5 @@ body{
     border-radius: 8px;
     /* color: aliceblue; */
     padding: 10px;
-    width: 280px;
+    width: 320px;
 }
