--- a/css/index.css
+++ b/css/index.css
@@ -52,9 +52,9 @@
 #nav-home img{
     height: 55px;
 }
-#nav-home img:hover{
+/* #nav-home img:hover{
     height: 75px;
-}
+} */
 
 /* Search Bar */
 #container h1{
