--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@
     /* float: right; */
     justify-content: center;
     align-items: center;
-    width: 50%;
+    /* width: 50%; */
     margin-left: 25px;
 }
 .nav-item{
@@ -37,9 +37,9 @@
     /* padding: 5px; */
 }
 .nav-item a{
-    padding: 40px;
+    padding: 35px;
     text-decoration: none;
-    margin-bottom:15px;
+    /* margin-bottom:15px; */
     /* color: aliceblue; */
 }
 .nav-item :hover{
@@ -47,7 +47,7 @@
 }
 #nav-home{
     list-style-type: none;
-    width: 50%;
+    width: 75%;
     /* float: left; */
 }
 #nav-home img{
@@ -72,13 +72,19 @@
     text-align: center;
     justify-content: center;
 }
+#searchdiv input{
+    background-image: url(/img/search16.png);
+    background-repeat: no-repeat;
+    background-position:10px 10px ;
+}
 #searchbar{
-    margin: 40px;
+    margin: 45px;
     width: 300px;
     border-radius: 8px;
     color:black;
     border-color: transparent;
-    padding: 15px;
+    padding: 10px;
+    padding-left: 35px;
     outline: none;
     /* opacity: 0.8; */
 }
