--- a/css/afterlogin.css
+++ b/css/afterlogin.css
@@ -44,6 +44,9 @@
 .nav-item :hover{
     color:rgb(10, 194, 10);
 }
+.nav-item a img{
+    color: aliceblue;
+}
 #nav-home{
     list-style-type: none;
     width: 50%;
