--- a/css/offer.css
+++ b/css/offer.css
@@ -55,14 +55,24 @@
 
 /* Main */
 .main{
-    margin-top: 30px;
+    margin-top: 10px;
     background-color: rgb(0, 77, 0);
-    /* display: flex; */
-    height: 200px;
+    display: flex;
+    height: 250px;
 }
 #image{
     display: flex;
     float: right;
-    height: 100px;
-    margin: 50px;
+    /* width: 50%; */
+    height: 200px;
+    /* margin-left: 500px; */
+    margin-top: 30px;
+}
+.para{
+    width: 80%;
+}
+.para h2,h4{
+    color: aliceblue;
+    padding: 5px;
+    margin: 60px;
 }
