--- a/css/signin.css
+++ b/css/signin.css
@@ -4,24 +4,25 @@
     font-family: Okra, Helvetica, sans-serif;
     color: aliceblue;
 }
-/* body{
-    background-image: url(/img/bg4.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+body{
     opacity: 0.9;
-} */
-#icon{
+    background-color: whitesmoke;
+}
+#navbar{
     display: flex;
     align-items: center;
     justify-content: center;
     width: auto;
+}
+#icon{
+    margin-top: 20px;
 }
 #container{
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 50px;
 }
 #form-container{
     display: flex;
@@ -31,12 +32,15 @@
     width: 350px;
     border: 1px solid;
     border-radius: 10px;
-    background-color: whitesmoke;
+    background-image: url(/img/bg4.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* background-color: whitesmoke; */
     /* width: auto; */
     /* opacity: 0.8; */
 }
-#form-container h2{
-    color: gray;
+#tag{
+    color:aliceblue ;
     padding: 10px;
 }
 #form-container span{
@@ -44,7 +48,7 @@
     padding: 5px;
 }
 #form-container a{
-    color:rgb(10, 194, 10) ;
+    color:aliceblue ;
     padding: 5px;
     text-decoration: none;
 }
