--- a/css/signin.css
+++ b/css/signin.css
@@ -5,8 +5,11 @@
     color: aliceblue;
 }
 body{
+    background-image: url(/img/bg4.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     opacity: 0.9;
-    background-color: whitesmoke;
+    /* background-color: whitesmoke; */
 }
 #navbar{
     display: flex;
@@ -22,7 +25,7 @@ body{
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 130px;
 }
 #form-container{
     display: flex;
@@ -32,15 +35,12 @@ body{
     width: 350px;
     border: 1px solid;
     border-radius: 10px;
-    background-image: url(/img/bg4.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    /* background-color: whitesmoke; */
+    background-color: whitesmoke; 
     /* width: auto; */
-    /* opacity: 0.8; */
+    opacity: 0.8;
 }
 #tag{
-    color:aliceblue ;
+    color:black ;
     padding: 10px;
 }
 #form-container span{
@@ -48,7 +48,7 @@ body{
     padding: 5px;
 }
 #form-container a{
-    color:aliceblue ;
+    color:rgb(10, 194, 10) ;
     padding: 5px;
     text-decoration: none;
 }
